Monsters now move properly
However, the road doesn't do what it is supposed to which results in the
game shuting down.