@@ -1,13 +1,13 @@
 package se.chalmers.TowerDefence;
 
-import java.util.LinkedList;
+import java.util.ArrayList;
 
 public class Road {
 	
-	private LinkedList<RoadSquare> roadIterator;
+	private ArrayList<RoadSquare> roadIterator;
 	
 	public Road(GameBoard gameBoard){
-		this.roadIterator = new LinkedList<RoadSquare>();
+		this.roadIterator = new ArrayList<RoadSquare>();
 		findRoad(gameBoard);
 	}
 	
@@ -18,28 +18,28 @@ public class Road {
 	private void findRoad(GameBoard gameBoard){
 		int[][] gb = gameBoard.getGameBoard();
 		//TODO better algoritm
-		int x = 1;
-    	int y = 0;
+		int x = 0;
+    	int y = 1;
     	boolean temp = true;
     	roadIterator.add(new RoadSquare(x,y));
-    	/*
     	while(temp){
-    		int lastX = roadIterator.getLast().getX();
-    		int lastY = roadIterator.getLast().getY();
+    		//*
+    		int lastX = roadIterator.get(roadIterator.size()-1).getX();
+    		int lastY = roadIterator.get(roadIterator.size()-1).getY();
     		
-    		if(gb[x+1][y] == 1 && !roadIterator.contains(new RoadSquare(x,y))){
+    		if(x+1 < gb.length && gb[x+1][y] == 1 && !roadIterator.contains(new RoadSquare(x,y))){
     			roadIterator.add(new RoadSquare(x+1, y));
-    		}else if(gb[x-1][y] == 1 && !roadIterator.contains(new RoadSquare(x,y))){
+    		}else if(x - 1 >= 0 && gb[x-1][y] == 1 && !roadIterator.contains(new RoadSquare(x,y))){
     			roadIterator.add(new RoadSquare(x-1, y));
-    		}else if(gb[x][y+1] == 1 && !roadIterator.contains(new RoadSquare(x,y))){
+    		}else if(y+1 < gb[x].length && gb[x][y+1] == 1 && !roadIterator.contains(new RoadSquare(x,y))){
     			roadIterator.add(new RoadSquare(x, y+1));
-    		}else if(gb[x][y-1] == 1 && !roadIterator.contains(new RoadSquare(x,y))){
+    		}else if(y - 1 >= 0 && gb[x][y-1] == 1 && !roadIterator.contains(new RoadSquare(x,y))){
     			roadIterator.add(new RoadSquare(x, y+1));
     		}else{
     			temp = false;
     		}
     		//*/	
-    		//*
+    		/*
     		if(gb[x+1][y] == 1){
 	    		roadIterator.add(new RoadSquare(x+1,y));
 	    		x++;
@@ -49,21 +49,36 @@ public class Road {
 	    	}else{
 	    		temp=false;
 	    	}
+    	}
 	    	//*/
     	}
+    	System.out.println(roadIterator);
+	}
 		
 	
 	public RoadSquare getFirst(){
-		//TODO
-		return roadIterator.getFirst();
+		return roadIterator.get(0); 
 	}
 	
-	public RoadSquare getNext(RoadSquare i){
-		return roadIterator.getLast();
+	public RoadSquare getNext(RoadSquare tempSquare){
+		for(int i = 0; i < roadIterator.size(); i++){
+//			System.out.println("Road: " + roadIterator.get(i).getX() + "  " + roadIterator.get(i+1).getX());
+			
+			if(roadIterator.get(i).equals(tempSquare) ){
+				return roadIterator.get(i+1);
+			}
+		}
+		return getLast();
 	}
 	
 	public RoadSquare getLast(){
-		return roadIterator.getLast();
+		return roadIterator.get(roadIterator.size()-1);
+	}
+	
+	public void typeToString(){
+		for(RoadSquare RS : roadIterator){
+			System.out.println("Road: " + RS.getX() + "  " + RS.getY());
+		}
 	}
 	
 }
